# OTGK_DP

./: Gbuilder.py  OTtools.py  README.md  install_dependencies.sh  main.py  models.py  pyproject.toml  utils.py
.devcontainer/: Dockerfile  devcontainer.json  postAttach.sh
Colab_tutorial/: tutorial.ipynb
figs/: visualization.py
lib/: Gbuilder.py
